[package]
name = "relhu"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClementTsang/relhu"
documentation = "https://docs.rs/relhu"
description = "A library that can parse relative and/or human time duration strings."
authors = ["Clement Tsang <cjhtsang@uwaterloo.ca>"]
keywords = ["duration", "time", "instant", "parse", "human", "relative"]
categories = ["date-and-time"]
exclude = ["scripts", "target", ".markdownlint.json", "CHANGELOG.md"]

[lib]
test = true
doctest = true
doc = true

[lints.rust]
rust_2018_idioms = "deny"
missing_docs = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"
